# noir-rover

./: .gitattributes  .gitignore  docker-compose.yml
api/: Dockerfile  bridge_api.py  entrypoint.sh  requirements.txt
core/: align_faces.py  customgpt.py  facerec.py  llama_rag.py  moondream.py  rag.py  speechstream.py  ui.py  whisperstt.py
core/retinaface/: detector.py  loader.py
docker/asr/: Dockerfile
docker/cv/: Dockerfile
docker/noir/: Dockerfile
noir/: Dockerfile  noir.py  xbox.py
ros-noetic/: Dockerfile  entrypoint.sh
ros-noetic/roller_eye/: CMakeLists.txt  package.xml
ros-noetic/roller_eye/msg/: frame.msg
