<?xml version="1.0"?>
<package format="2">
  <name>roller_eye</name>
  <version>1.0.0</version>
  <description>Minimal Moorebot Scout message and service definitions</description>
  <maintainer email="akash.james2096@gmail.com">Developer</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
